package edu.austral.ingsis.fileSystem;

public record File(String name) implements FileSystemComponent {
}
