package edu.austral.ingsis.fileSystem;

public interface FileSystemComponent {
    String name();
}
